numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@unknown_callable.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/unknown_callable.nbt
---
error: while type checking
  ┌─ <internal:3>:2:1
  │
2 │ sqtr(area)
  │ ^^^^ unknown identifier
  │
  = Did you mean 'sqr'?
